--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,21 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.mandrakeLeft {
+    height: auto; 
+    width: auto; 
+    max-height: 150px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+.mandrakeRight {
+    height: auto; 
+    width: auto; 
+    max-height: 150px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
